Fix <tfoot> font size in Safari on iOS

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -78,8 +78,3 @@ embed {
 [hidden] {
   display: none;
 }
-
-* {
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
-}
